pipe cellRowArray; multiple layout fixes in sbom one remaining, if the image name is too big, the refresh button gets pusshed

--- a/src/TrivyOperator.Dashboard/ClientApp/src/app/fcose/fcose.component.scss
+++ b/src/TrivyOperator.Dashboard/ClientApp/src/app/fcose/fcose.component.scss
@@ -1,3 +1,39 @@
 .graph-container:focus {
   outline: none; /* Removes the focus outline */
 }
+
+/* Define variables for heights */
+$default-height: calc(100vh - 190px);
+$default-height-half: calc(50vh - 95px);
+
+/* base style */
+.fcose {
+  height: $default-height;
+  width: 100%;
+  display: flex !important;
+  flex-direction: column !important;
+  flex-grow: 1 !important;
+  /* styles when classB is also present */
+  &.fcose-half {
+    height: $default-height-half;
+
+    @media (min-width: 576px) {
+      height: $default-height;
+    }
+  }
+}
+
+.hidden-sm {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .hidden-sm {
+    display: block;
+  }
+}
+
+.p-dropdown-max {
+  max-width: calc(100% - 36px);
+  width: calc(100% - 36px);
+}
